--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="format-detection" content="telephone-yes">
+  <meta name="Handheld Friendly" content="true">
+  <!-- SEO here -->
+
+   <!----------->
   <title>Home | KG Beach Resort</title>
   <link rel="shortcut icon" href="./images/logo-removebg-preview.png" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
@@ -21,7 +26,7 @@
       <div class="main-content">
         KG <br> 
         BEACH RESORT <br> 
-        <a href="#" class="main-button">Book a reservation</a>
+        <a href="#" class="main-button">Contact Us</a>
       </div>
     </div>
 
@@ -32,7 +37,7 @@
       </div>
       <div class="perks">
         <div>
-          <img src="./images/charging.png" alt="Charging Station">
+          <img src="./images/charging.jpg" alt="Charging Station">
           <p>Power outlet / Charging Station</p>
         </div>
         <div>
@@ -54,36 +59,74 @@
         <p>Our Cottages</p>
       </div>
       <div class="cottages-content">
-        <div>
-          <img src="" alt="1">
-          <p>Cottage 1</p>
+        <div class="cottages-items"><img src="./images/cottage-1.jpg" alt="1">
+          <ul>
+            <li>Standard Cottage</li>
+            <li>Can seat up to 9 persons</li>
+            <li>Closest to the beach</li>
+          </ul>
         </div>
-        <div>
-          <img src="" alt="2">
-          <p>Cottage 2</p>
+        <div class="cottages-items"><img src="./images/cottage-2.jpg" alt="2">
+          <ul>
+            <li>Medium Cottage</li>
+            <li>Can seat up to 13 persons</li>
+            <li>Nearest to the Kitchen</li>
+          </ul>
         </div>
-        <div>
-          <img src="" alt="3">
-          <p>Cottage 3</p>
+        <div class="cottages-items"><img src="./images/cottage-3.jpg" alt="3">
+          <ul>
+            <li>Large Cottage</li>
+            <li>Can seat up to 18 persons</li>
+            <li>Nearest to the Kitchen</li>
+          </ul>
         </div>
-        <div>
-          <img src="" alt="4">
-          <p>Cottage 4</p>
-        </div>
+      </div>
+    </div>
+    <div class="contact-us">Contact us</div>
+    <div class="about-us">
+      <div class="about-items">
+        <img src="./images/address.png" alt="">
+        <p>Our location</p>
+        <p class="about-information">Del Rosario St, Nato, Sagnay <br>
+          Camarines Sur, Bicol Region </p>
+      </div>
+      <div class="about-items">
+        <img src="./images/phone.png" alt="">
+        <p>Phone Numbers</p>
+        <p class="about-information">09171234567 (Globe)</p>
+        <p class="about-information">09451234567 (Smart)</p>
+      </div>
+      <div class="about-items">
+        <img src="./images/email.png" alt="">
+        <p>Email us at</p>
+        <p class="about-information">email@gmail.com</p>
       </div>
     </div>
   </main>
   <footer>
-    <div>footer</div>
+    <div class="footer-container">
+
+      <div class="footer-items">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1938.8809055281629!2d123.5353044!3d13.6113544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33a1c7631384cbd5%3A0x73b6ef5c9cd252a!2sTep%20%40%20the%20Beach%20Resort!5e0!3m2!1sen!2sph!4v1666940362810!5m2!1sen!2sph" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+      </div>
+
+      <div class="footer-items">
+        <ul>
+          <li>
+            <a href="#">
+              <img src="./images/facebook-removebg-preview.png"alt="">
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/youtube-removebg-preview.png" alt="">
+            </a>
+          </li>
+        </ul>
+      </div>
+
+    </div>
   </footer>
-
-
-
-
-
-
-  <script>
-
-  </script>
 </body>
 </html>
