--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
     <div class="footer-container">
 
       <div class="footer-items">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1938.8809055281629!2d123.5353044!3d13.6113544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33a1c7631384cbd5%3A0x73b6ef5c9cd252a!2sTep%20%40%20the%20Beach%20Resort!5e0!3m2!1sen!2sph!4v1666940362810!5m2!1sen!2sph" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1938.8809055281629!2d123.5353044!3d13.6113544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33a1c7631384cbd5%3A0x73b6ef5c9cd252a!2sTep%20%40%20the%20Beach%20Resort!5e0!3m2!1sen!2sph!4v1666940362810!5m2!1sen!2sph"
+             width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
           </iframe>
       </div>
 
