--- a/attractions.html
+++ b/attractions.html
@@ -42,11 +42,36 @@
             <li>Partido Riviera</li>
           </ul>
         </div>
-        <div class="attractions-items"><img src="./images/attractions/nato-pier.jpg" alt="4">
+        <div class="attractions-items"><img src="./images/attractions/nato-pier.jpg" alt="">
             <ul>
               <li>Nato Pier</li>
             </ul>
-          </div>
+        </div>
+        <div class="attractions-items"><img src="./images/attractions/st-andrew-church.jpg" alt="">
+          <ul>
+            <li>334 year old St. Andrew Church</li>
+          </ul>
+        </div>
+        <div class="attractions-items"><img src="./images/attractions/deer-farm.jpg" alt="">
+          <ul>
+            <li>Deer Farm</li>
+          </ul>
+        </div>
+        <div class="attractions-items"><img src="./images/attractions/strawberry-farm.jpg" alt="">
+          <ul>
+            <li>Strawberry Farm</li>
+          </ul>
+        </div>
+        <div class="attractions-items"><img src="./images/attractions/consocep-nature-park.jpg" alt="">
+          <ul>
+            <li>Consocep Nature Park</li>
+          </ul>
+        </div>
+        <div class="attractions-items"><img src="./images/attractions/hibiscus-camp.jpg" alt="">
+          <ul>
+            <li>Hibiscus Camp</li>
+          </ul>
+        </div>
       </div>
     </div>
   </main>
