--- a/attractions.html
+++ b/attractions.html
@@ -9,8 +9,8 @@
   <!-- SEO here -->
 
    <!----------->
-  <title>Home | KG Beach Resort</title>
-  <link rel="shortcut icon" href="./images/logo-removebg-preview.png" type="image/x-icon">
+  <title>Attractions | Tep @ the Beach Resort</title>
+  <link rel="shortcut icon" href="./images/favicon2.png" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -88,19 +88,31 @@
       <div class="footer-items">
         <ul>
           <li>
-            <a href="#">
-              <img src="./images/facebook-removebg-preview.png"alt="">
+            <a href="https://www.facebook.com/profile.php?id=100083436394796" target="_blank">
+              <img src="./images/facebook-removebg-preview.png"alt="facebook">
             </a>
           </li>
           <li>
-            <a href="#">
-              <img src="./images/youtube-removebg-preview.png" alt="">
+            <a href="https://www.youtube.com/channel/UCX6r_c2LyaVrwnv8c6BhTww/featured" target="_blank">
+              <img src="./images/youtube-removebg-preview.png" alt="youtube">
             </a>
           </li>
         </ul>
       </div>
 
     </div>
+
+    <div class="copyright">
+      <p>Copyright © Tep @ the Beach Resort, 2022</p>
+      <p>Developed by Kenn G.</p>
+    </div>
+
+    <div class="rt-button">
+      <a href="#">
+        <img src="./images/arrow-up.png" alt="">
+      </a>
+    </div>
+
   </footer>
 </body>
 </html>
