--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <!-- SEO here -->
 
    <!----------->
-  <title>Home | KG Beach Resort</title>
-  <link rel="shortcut icon" href="./images/logo-removebg-preview.png" type="image/x-icon">
+  <title>Home | Tep @ the Beach Resort</title>
+  <link rel="shortcut icon" href="./images/favicon2.png" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,16 +24,16 @@
   <main>
     <div class="main">
       <div class="main-content">
-        KG <br> 
-        BEACH RESORT <br> 
-        <a href="#" class="main-button">Contact Us</a>
+        TEP @  <br> 
+        THE BEACH RESORT <br> 
+        <a href="#contacts" class="main-button">Contact Us</a>
       </div>
     </div>
 
     <div class="intro">
       <div class="intro-message">
-        <h4>Welcome to KG Beach Resort</h4> <br>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex, praesentium?</p>
+        <h4>Welcome to Tep @ the Beach Resort</h4> <br>
+        <p>We offer the best and cheapest services! Reserve now & get our exclusive perks.</p>
       </div>
       <div class="perks">
         <div>
@@ -82,24 +82,24 @@
         </div>
       </div>
     </div>
-    <div class="contact-us">Contact us</div>
+    <div class="contact-us" id="contacts">Contact us</div>
     <div class="about-us">
       <div class="about-items">
         <img src="./images/address.png" alt="">
-        <p>Our location</p>
+        <p>Our location:</p>
         <p class="about-information">Del Rosario St, Nato, Sagnay <br>
           Camarines Sur, Bicol Region </p>
       </div>
       <div class="about-items">
         <img src="./images/phone.png" alt="">
-        <p>Phone Numbers</p>
-        <p class="about-information">09171234567 (Globe)</p>
-        <p class="about-information">09451234567 (Smart)</p>
+        <p>Our contact number:</p>
+        <p class="about-information">09653110505 (Globe)</p> 
+        <p class="about-information"></p>
       </div>
       <div class="about-items">
         <img src="./images/email.png" alt="">
-        <p>Email us at</p>
-        <p class="about-information">email@gmail.com</p>
+        <p>Email us at:</p>
+        <p class="about-information contact-email">joejoe9992016@gmail.com.ph</p>
       </div>
     </div>
   </main>
@@ -115,19 +115,30 @@
       <div class="footer-items">
         <ul>
           <li>
-            <a href="#">
+            <a href="https://www.facebook.com/profile.php?id=100083436394796" target="_blank">
               <img src="./images/facebook-removebg-preview.png"alt="">
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="https://www.youtube.com/channel/UCX6r_c2LyaVrwnv8c6BhTww/featured" target="_blank">
               <img src="./images/youtube-removebg-preview.png" alt="">
             </a>
           </li>
         </ul>
       </div>
-
     </div>
+
+    <div class="copyright">
+      <p>Copyright © Tep @ the Beach Resort, 2022</p>
+      <p>Developed by Kenn G.</p>
+    </div>
+
+    <div class="rt-button">
+      <a href="#">
+        <img src="./images/arrow-up.png" alt="">
+      </a>
+    </div>
+
   </footer>
 </body>
 </html>
