--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <ul>
           <li>
             <a href="https://www.facebook.com/profile.php?id=100083436394796" target="_blank">
-              <img src="./images/facebook-removebg-preview.png"alt="">
+              <img src="./images/facebook-removebg-preview.png"alt="">s
             </a>
           </li>
           <li>
@@ -127,7 +127,7 @@
         </ul>
       </div>
     </div>
-
+  
     <div class="copyright">
       <p>Copyright © Tep @ the Beach Resort, 2022</p>
       <p>Developed by Kenn G.</p>
