--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <ul>
           <li>
             <a href="https://www.facebook.com/profile.php?id=100083436394796" target="_blank">
-              <img src="./images/facebook-removebg-preview.png"alt="">s
+              <img src="./images/facebook-removebg-preview.png"alt="">
             </a>
           </li>
           <li>
