--- a/attractions.html
+++ b/attractions.html
@@ -18,7 +18,7 @@
     <div class="nav-bar">
       <div class="nav-link"><a href="./index.html">Home</a></div>
       <div class="nav-link"><a href="./attractions.html">Nearby Attractions</a></div>
-      <div class="nav-link"><a href="#">Vlogs</a></div>
+      <div class="nav-link"><a href="./vlogs.html">Vlogs</a></div>
     </div>
   </nav>
   <main>
@@ -114,5 +114,7 @@
     </div>
 
   </footer>
+  <div class="pre-loader"></div>
+  <script src="./script.js"></script>
 </body>
 </html>
