--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="nav-bar">
       <div class="nav-link"><a href="./index.html">Home</a></div>
       <div class="nav-link"><a href="./attractions.html">Nearby Attractions</a></div>
-      <div class="nav-link"><a href="#">Vlogs</a></div>
+      <div class="nav-link"><a href="./vlogs.html">Vlogs</a></div>
     </div>
   </nav>
   <main>
@@ -93,7 +93,7 @@
       <div class="about-items">
         <img src="./images/phone.png" alt="">
         <p>Our contact number:</p>
-        <p class="about-information">09653110505 (Globe)</p> 
+        <p class="about-information contact-number"><a href="tel:+63953110505">09653110505</a> (Globe)</p> 
         <p class="about-information"></p>
       </div>
       <div class="about-items">
@@ -140,5 +140,7 @@
     </div>
 
   </footer>
+  <div class="pre-loader"></div>
+<script src="./script.js"></script>
 </body>
 </html>
