--- a/vlogs.html
+++ b/vlogs.html
@@ -9,7 +9,7 @@
   <!-- SEO here -->
 
    <!----------->
-  <title>Attractions | Tep @ the Beach Resort</title>
+  <title>Vlogs | Tep @ the Beach Resort</title>
   <link rel="shortcut icon" href="./images/favicon2.png" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
 </head>
