--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="intro">
       <div class="intro-message">
         <h4>Welcome to Tep @ the Beach Resort</h4> <br>
-        <p>We offer the best and cheapest services! Reserve now & get our exclusive perks.</p>
+        <p>Affordable cottages plus enjoy our exclusive perks!</p>
       </div>
       <div class="perks">
         <div>
@@ -49,8 +49,12 @@
           <p>Night lights / Night swimming</p>
         </div>
         <div>
-          <img src="./images/shower.jpg" alt="Comfort Room">
-          <p>Free use of CR</p>
+          <img src="./images/boat.png" alt="Boat">
+          <p>Island Access</p>
+        </div>
+        <div>
+          <img src="./images/discount.png" alt="Discount">
+          <p>Subscriber discount</p>
         </div>
       </div>
     </div>
