--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
       <div class="about-items">
         <img src="./images/email.png" alt="">
         <p>Email us at:</p>
-        <p class="about-information contact-email">joejoe9992016@gmail.com.ph</p>
+        <p class="about-information contact-email">tepbeachresort@gmail.com
+        </p>
       </div>
     </div>
   </main>
