--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   <meta name="format-detection" content="telephone-yes">
   <meta name="Handheld Friendly" content="true">
   <!-- SEO here -->
-
-   <!----------->
+  <meta property="og:title" content="Tep at the Beach Resort">
+  <meta property="og:description" content="Cheapest Beach Resort in Nato Sagnay Camarines Sur, Atulayan Island, Videoke, Night swimming, Discounted cottage">
+  <meta property="og:image" content="https://scontent.fmnl3-2.fna.fbcdn.net/v/t39.30808-6/288096677_109676918441542_5974891832501433858_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=174925&_nc_ohc=6CKpPaaDreAAX8D-gQ4&_nc_ht=scontent.fmnl3-2.fna&oh=00_AfBm2C436Ft-F98tnxXaY0MkpiY9ls_H4qx95TALu5o7fQ&oe=636F3ACE">
+  <meta property="og:url" content=" ">
+  <!----------->
   <title>Home | Tep @ the Beach Resort</title>
   <link rel="shortcut icon" href="./images/favicon2.png" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
@@ -63,21 +66,21 @@
         <p>Our Cottages</p>
       </div>
       <div class="cottages-content">
-        <div class="cottages-items"><img src="./images/cottage-1.jpg" alt="1">
+        <div class="cottages-items"><img src="./images/no-image.jpg" alt="1">
           <ul>
             <li>Standard Cottage</li>
             <li>Can seat up to 9 persons</li>
             <li>Closest to the beach</li>
           </ul>
         </div>
-        <div class="cottages-items"><img src="./images/cottage-2.jpg" alt="2">
+        <div class="cottages-items"><img src="./images/no-image.jpg" alt="2">
           <ul>
             <li>Medium Cottage</li>
             <li>Can seat up to 13 persons</li>
             <li>Nearest to the Kitchen</li>
           </ul>
         </div>
-        <div class="cottages-items"><img src="./images/cottage-3.jpg" alt="3">
+        <div class="cottages-items"><img src="./images/no-image.jpg"" alt="3">
           <ul>
             <li>Large Cottage</li>
             <li>Can seat up to 18 persons</li>
